Ported UI fixes for Clippings Manager from Clippings 6.3

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -1165,7 +1165,7 @@ ul.fancytree-container {
 }
 
 #import-dlg {
-    --width: 398px;
+    --width: 408px;
     --height: 206px;
     top: 40px;
 }
@@ -1327,8 +1327,8 @@ body[data-locale="de"] #export-dlg #export-format-list-label {
 
 #move-dlg {
     --width: 342px;
-    --height: 282px;
-    top: 32px;
+    --height: 304px;
+    top: 24px;
 }
 
 #move-dlg #move-to-fldr-tree {
@@ -1338,7 +1338,7 @@ body[data-locale="de"] #export-dlg #export-format-list-label {
 }
 
 #move-dlg #move-to-fldr-tree > .fancytree-container {
-    height: 154px;
+    height: 174px;
     overflow: auto;
 }
 
